roles/openvpn-server/files/iptables
# Generated by iptables-save v1.4.7 on Mon Apr 25 17:13:12 2016
*nat
:PREROUTING ACCEPT [4:220]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A POSTROUTING -s 172.18.255.0/24 -o eth0 -j MASQUERADE 
-A POSTROUTING -j SNAT --to-source 172.18.1.79 
COMMIT
# Completed on Mon Apr 25 17:13:12 2016
# Generated by iptables-save v1.4.7 on Mon Apr 25 17:13:12 2016
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:LOGDROP - [0:0]
# Allow inbound ICMP traffic, throttle the rest
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -s 172.20.0.0/16 -p icmp -m state --state NEW -j ACCEPT
-A INPUT -s 172.19.0.0/16 -p icmp -m state --state NEW -j ACCEPT 
-A INPUT -s 172.18.0.0/16 -p icmp -m state --state NEW -j ACCEPT 
-A INPUT -s 172.16.0.0/16 -p icmp -m state --state NEW -j ACCEPT 
-A INPUT -p icmp -m state --state NEW -m limit --limit 50/sec --limit-burst 10 -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
# Allow inbound ssh traffic from the VPN subnet and GLP office
-A INPUT -s 188.39.12.12/32 -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 
-A INPUT -s 172.18.255.0/24 -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 
-A INPUT -p udp -m state --state NEW -m udp --dport 1194 -j ACCEPT 
-A INPUT -s 172.20.10.7/32 -p tcp -m state --state NEW -m tcp --dport 9102 -j ACCEPT 
-A INPUT -j LOGDROP 
# Forward traffic to the relevant networks
-A FORWARD -s 172.18.255.0/24 -i tun0 -o eth0 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT 
-A FORWARD -s 172.20.0.0/16 -i eth0 -o tun0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 172.19.0.0/16 -i eth0 -o tun0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 172.18.0.0/16 -i eth0 -o tun0 -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A FORWARD -s 172.16.0.0/16 -i eth0 -o tun0 -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A FORWARD -j LOGDROP 
-A OUTPUT -o lo -j ACCEPT 
# Allow outbound ICMP traffic from the VPN subnet, throttle the rest of the world
-A OUTPUT -d 54.72.67.77/32 -p icmp -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT 
-A OUTPUT -d 172.20.0.0/16 -p icmp -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT 
-A OUTPUT -d 172.19.0.0/16 -p icmp -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -d 172.18.0.0/16 -p icmp -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT 
-A OUTPUT -d 172.16.0.0/16 -p icmp -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT 
-A OUTPUT -p icmp -m state --state NEW,RELATED,ESTABLISHED -m hashlimit --hashlimit-upto 2/sec --hashlimit-mode dstip --hashlimit-name icmp-out -j ACCEPT
# Allow outdoun ssh to GLP Office and VPN Subnet 
-A OUTPUT -d 188.39.12.12/32 -p tcp -m state --state RELATED,ESTABLISHED -m tcp --sport 22 -j ACCEPT 
-A OUTPUT -d 172.18.255.0/24 -p tcp -m state --state RELATED,ESTABLISHED -m tcp --sport 22 -j ACCEPT 
-A OUTPUT -d 54.217.239.86/32 -p tcp -m state --state NEW,RELATED,ESTABLISHED -m tcp --dport 22 -j ACCEPT 
-A OUTPUT -d 172.28.251.72/32 -p tcp -m state --state NEW,RELATED,ESTABLISHED -m tcp --dport 22 -j ACCEPT 
-A OUTPUT -d 172.28.251.74/32 -p tcp -m state --state NEW,RELATED,ESTABLISHED -m tcp --dport 22 -j ACCEPT 
-A OUTPUT -d 172.20.1.38/32 -p tcp -m state --state NEW,ESTABLISHED -m tcp --dport 25 -j ACCEPT 
-A OUTPUT -d 172.20.1.39/32 -p tcp -m state --state NEW,ESTABLISHED -m tcp --dport 25 -j ACCEPT 
-A OUTPUT -d 172.18.1.1/32 -p udp -m udp --sport 68 --dport 67 -j ACCEPT 
# Allow outbound DNS queries to GLP DNS servers and Google DNS
-A OUTPUT -d 172.20.0.2/32 -p udp -m state --state NEW,ESTABLISHED -m udp --dport 53 -j ACCEPT 
-A OUTPUT -d 172.20.0.2/32 -p tcp -m state --state NEW,ESTABLISHED -m tcp --dport 53 -j ACCEPT 
-A OUTPUT -d 172.20.10.6/32 -p udp -m state --state NEW,ESTABLISHED -m udp --dport 53 -j ACCEPT 
-A OUTPUT -d 172.20.10.6/32 -p tcp -m state --state NEW,ESTABLISHED -m tcp --dport 53 -j ACCEPT 
-A OUTPUT -d 172.20.20.6/32 -p udp -m state --state NEW,ESTABLISHED -m udp --dport 53 -j ACCEPT 
-A OUTPUT -d 172.20.20.6/32 -p tcp -m state --state NEW,ESTABLISHED -m tcp --dport 53 -j ACCEPT
-A OUTPUT -d 172.16.200.20/32 -p tcp -m state --state NEW,ESTABLISHED -m tcp --dport 53 -j ACCEPT
-A OUTPUT -d 172.16.200.20/32 -p udp -m state --state NEW,ESTABLISHED -m udp --dport 53 -j ACCEPT
-A OUTPUT -d 172.16.200.21/32 -p tcp -m state --state NEW,ESTABLISHED -m tcp --dport 53 -j ACCEPT
-A OUTPUT -d 172.16.200.21/32 -p udp -m state --state NEW,ESTABLISHED -m udp --dport 53 -j ACCEPT
-A OUTPUT -d 8.8.8.8/32 -p tcp -m state --state NEW,ESTABLISHED -m tcp --dport 53 -j ACCEPT
-A OUTPUT -d 8.8.8.8/32 -p udp -m state --state NEW,ESTABLISHED -m udp --dport 53 -j ACCEPT
-A OUTPUT -d 172.20.10.5/32 -p tcp -m state --state NEW,ESTABLISHED -m tcp --dport 80 -j ACCEPT 
-A OUTPUT -d 172.20.10.5/32 -p tcp -m state --state NEW,ESTABLISHED -m tcp --dport 443 -j ACCEPT 
-A OUTPUT -d 172.20.10.4/32 -p udp -m state --state NEW,ESTABLISHED -m udp --dport 123 -j ACCEPT 
-A OUTPUT -d 172.20.20.4/32 -p udp -m state --state NEW,ESTABLISHED -m udp --dport 123 -j ACCEPT 
-A OUTPUT -d 172.20.10.10/32 -p tcp -m state --state NEW,ESTABLISHED -m tcp --dport 514 -j ACCEPT 
-A OUTPUT -p udp -m state --state RELATED,ESTABLISHED -m udp --sport 1194 -j ACCEPT 
-A OUTPUT -d 172.20.10.10/32 -p udp -m state --state NEW,RELATED,ESTABLISHED -m udp --dport 1514 -j ACCEPT 
-A OUTPUT -d 172.20.10.11/32 -p tcp -m state --state RELATED,ESTABLISHED -m tcp --sport 5666 -j ACCEPT 
-A OUTPUT -d 172.20.10.12/32 -p tcp -m state --state RELATED,ESTABLISHED -m tcp --sport 5666 -j ACCEPT 
-A OUTPUT -d 172.20.10.7/32 -p tcp -m state --state RELATED,ESTABLISHED -m tcp --sport 9102 -j ACCEPT 
-A OUTPUT -d 172.20.10.7/32 -p tcp -m state --state NEW,RELATED,ESTABLISHED -m tcp --dport 9103 -j ACCEPT 
-A OUTPUT -j LOGDROP 
-A LOGDROP -m limit --limit 2/sec -j LOG --log-prefix "iptables: " 
-A LOGDROP -j DROP 
COMMIT
# Completed on Mon Apr 25 17:13:12 2016
